syntax = "proto3";

package message;


message MsgHead{
    int32 msgId = 1;
    bytes localStationId = 2;
    bytes remoteStationId =3;
    bytes headinfo = 16;
}

